[package]
name = "resmack"
version = "0.1.0"
authors = ["James Johnson <d0c.s4vage@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ""
twox-hash = "*"
fnv = "*"
num = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
