[package]
name = "resmack"
version = "0.1.0"
authors = ["James Johnson <d0c.s4vage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "*"
rand_chacha = "*"
rand_pcg = "*"
rand_isaac = "*"
rand_hc = "*"

[[bench]]
name = "prngs"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
